# SkyrimMods

./: .gitignore  README.md  SkyrimMods.code-workspace
.claude/hooks/: auto-commit.ps1
HagIPC/: CMakeLists.txt  CMakePresets.json  README.md  build.ps1  vcpkg.json
HagIPC/src/: Config.cpp  Log.cpp  Offsets.h  PCH.h  SKSE_Min.h
HagIPC/src/ipc/: ConsoleExec.cpp  SaveLoad.cpp  Server.cpp
HagLoader/: .gitignore  CMakeLists.txt  README.md  build.ps1  vcpkg.json
HagLoader/assets/: HagUI_Menu.as  HagUI_Root.as
HagLoader/docs/: Model3D-RE.md  UI-RE.md
HagLoader/ghidra/: rtti_script.txt  sc_compiler.txt  sc_consolemenu.txt  sc_handle.txt  sc_scriptctor.txt  scrap_strings.txt  trace3.txt  trace_cursor.txt  trace_cursormenu.txt  ui_callers.txt  ui_close.txt  ui_creditsclose.txt  ui_decomp.txt  ui_decomp2.txt  ui_decomp3.txt  ui_decomp4.txt  ui_decomp5.txt  ui_decomp8.txt  ui_decompA.txt  ui_decompB.txt  ui_decompC.txt  ui_decompD.txt  ui_decompE.txt  ui_dump.txt  ui_invoke.txt  ui_invsample.txt  ui_journalproc.txt  ui_mainmenu.txt  ui_menus.txt  ui_open.txt  ui_protocol.txt  ui_refs.txt  ui_setmember.txt  ui_vtable.txt  vampire_feed_decomp.txt  vampire_feed_helpers.txt  vampire_feed_strings.txt  vtable_credits.txt
HagLoader/ghidra/scripts/: BuildXref.java  DisasmContainingBlocks.java  DumpRefs.java  DumpUI.java  FindStringRefs.java  FindTargetRefs.java  RTTIDecompileRefs.java  ScanOffsetRefs.java  registerfuncs.txt  run_ghidra.ps1  setmember_helper.txt  setsavedisabled_str.txt
HagLoader/src/: Animation.cpp  Animation.h  CellChangeHook.cpp  CellChangeHook.h  ConfigStore.cpp  ConfigStore.h  ConsoleExec.cpp  ConsoleQueue.cpp  ConsoleQueue.h  GameState.cpp  GameState.h  Hooking.cpp  Hooking.h  HotkeyManager.cpp  HotkeyManager.h  LoaderApiExport.cpp  Log.cpp  ModManager.cpp  ModManager.h  NativeTaskQueue.cpp  NativeTaskQueue.h  Offsets.h  PCH.h  PapyrusCall.cpp  PapyrusCall.h  Plugin.cpp  SKSE_Min.h  SaveStorage.cpp  SaveStorage.h
HagLoader/src/UI/: GfxInject.cpp  HagMenu.cpp  HagMenu.h  Model3D.cpp  OptionRender.cpp
HagLoader/src/api/: HagApi.cpp  HagApi.h  HagApiExport.cpp
HagUI/: CMakeLists.txt  README.md  build.ps1
HagUI/docs/: UI-RE.md
HagUI/ghidra/: sc_compileandrun.txt  sc_console.txt  str_console.txt  trace2.txt  trace_close.txt  ui_credits.txt  ui_decomp6.txt  ui_decomp7.txt  ui_decomp9.txt  ui_decompF.txt  ui_invcallers.txt  ui_probe2.txt  ui_registrars.txt  ui_regmap.txt  ui_ssd.txt  ui_tick.txt  ui_xref.txt  ui_xref1.txt  ui_xref2.txt  vtable_barter.txt  vtable_script.txt
HagUI/src/: ModManager.cpp  ModManager.h  Offsets.h  Plugin.cpp  Plugin.h
mods/: build_mods.ps1
mods/HagGeneral/: CMakeLists.txt  README.md  build.ps1  deploy.ps1  vcpkg.json
mods/HagGeneral/assets/: HagGeneral.ini
mods/HagGeneral/src/: ChildHostilityUnblocker.cpp  ChildHostilityUnblocker.h  Config.cpp  Config.h  Display.cpp  Display.h  HagUIBridge.cpp  HagUIBridge.h  Log.h  Offsets.h  Plugin.cpp  Plugin.h  SettingsHook.cpp  SettingsHook.h
mods/HagVampire/: CMakeLists.txt  README.md  build.ps1  vcpkg.json
mods/HagVampire/assets/: HagVampire.esp
mods/HagVampire/assets/Scripts/: HagVampireBridge.pex
mods/HagVampire/assets/meshes/actors/character/animations/HagVampire/: hagvampire_throat_cut.hkx
mods/HagVampire/papyrus/: TESV_Papyrus_Flags.flg
mods/HagVampire/papyrus/Source/: HagVampireBridge.psc
mods/HagVampire/papyrus/Stubs/: PlayerVampireQuestScript.psc
mods/HagVampire/src/: ConsoleExec.cpp  ConsoleExec.h  Log.cpp  Log.h  Offsets.h  PCH.h  Plugin.cpp  SKSE_Min.h
mods/HagVampire/tools/: generate_cut_animation.py  make_hagvampire_esp.cjs
scripts/: auto-git-commit.cjs
shared/: GameOffsets.h  HagLoaderAPI.h  HagUIAPI.h  SkyrimModAPI.h
tools/: pe_x64_field_scan.py  pe_x64_target_scan.py
(+27 files in other folders)
